switched to javafx